--- a/weaviate.ipynb
+++ b/weaviate.ipynb
@@ -539,7 +539,7 @@
     "        query=\"sci-fi\",\n",
     "        limit=2,  #how many objects it will\n",
     "        return_properties=[\"question\", \"answer\"],\n",
-    "        certainty=0.25, # max accepted distance \n",
+    "        certainty=0.25, # min accepted distance \n",
     "        return_metadata=MetadataQuery(distance=True)\n",
     "    )\n",
     "\n",
